load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
config_setting(
  name = "osxCase",
  values = {
    "apple_platform_type": "macos"
  }
)
config_setting(
  name = "tvosCase",
  values = {
    "apple_platform_type": "tvos"
  }
)
config_setting(
  name = "watchosCase",
  values = {
    "apple_platform_type": "watchos"
  }
)
config_setting(
  name = "ios_armv7",
  values = {
    "cpu": "ios_armv7"
  }
)
config_setting(
  name = "ios_arm64",
  values = {
    "cpu": "ios_arm64"
  }
)
config_setting(
  name = "ios_arm64e",
  values = {
    "cpu": "ios_arm64e"
  }
)
config_setting(
  name = "ios_sim_arm64",
  values = {
    "cpu": "ios_sim_arm64"
  }
)
config_setting(
  name = "ios_i386",
  values = {
    "cpu": "ios_i386"
  }
)
config_setting(
  name = "ios_x86_64",
  values = {
    "cpu": "ios_x86_64"
  }
)
genrule(
  name = "FBRetainCycleDetector_InfoPlist",
  srcs = [],
  outs = [
    "FBRetainCycleDetector_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.FBRetainCycleDetector</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>FBRetainCycleDetector</string>
	<key>CFBundlePackageType</key>
	<string>FMWK</string>
	<key>CFBundleShortVersionString</key>
	<string>0.1.4</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>10.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)
apple_framework(
  name = "FBRetainCycleDetector",
  module_name = "FBRetainCycleDetector",
  bundle_id = "org.cocoapods.FBRetainCycleDetector",
  link_dynamic = True,
  testonly = False,
  infoplists = [
    ":FBRetainCycleDetector_InfoPlist"
  ],
  platforms = {
    "ios": "10.0"
  },
  srcs = glob(
    [
      "FBRetainCycleDetector/**/*.S",
      "FBRetainCycleDetector/**/*.c",
      "FBRetainCycleDetector/**/*.cc",
      "FBRetainCycleDetector/**/*.cpp",
      "FBRetainCycleDetector/**/*.cxx",
      "FBRetainCycleDetector/**/*.h",
      "FBRetainCycleDetector/**/*.hpp",
      "FBRetainCycleDetector/**/*.hxx",
      "FBRetainCycleDetector/**/*.m",
      "FBRetainCycleDetector/**/*.mm",
      "FBRetainCycleDetector/**/*.s",
      "FBRetainCycleDetector/**/*.swift",
      "fishhook/**/*.c",
      "fishhook/**/*.h",
      "fishhook/**/*.m",
      "fishhook/**/*.mm"
    ]
  ),
  public_headers = glob(
    [
      "FBRetainCycleDetector/Associations/FBAssociationManager.h",
      "FBRetainCycleDetector/Detector/FBRetainCycleDetector.h",
      "FBRetainCycleDetector/Filtering/FBStandardGraphEdgeFilters.h",
      "FBRetainCycleDetector/Graph/FBObjectGraphConfiguration.h",
      "FBRetainCycleDetector/Graph/FBObjectiveCBlock.h",
      "FBRetainCycleDetector/Graph/FBObjectiveCGraphElement.h",
      "FBRetainCycleDetector/Graph/FBObjectiveCObject.h",
      "FBRetainCycleDetector/Graph/Specialization/FBObjectiveCNSCFTimer.h"
    ]
  ),
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  sdk_dylibs = [
    "c++"
  ],
  sdk_frameworks = [
    "CoreGraphics",
    "Foundation",
    "UIKit"
  ],
  visibility = [
    "//visibility:public"
  ]
)