load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
config_setting(
  name = "osxCase",
  values = {
    "apple_platform_type": "macos"
  }
)
config_setting(
  name = "tvosCase",
  values = {
    "apple_platform_type": "tvos"
  }
)
config_setting(
  name = "watchosCase",
  values = {
    "apple_platform_type": "watchos"
  }
)
config_setting(
  name = "ios_armv7",
  values = {
    "cpu": "ios_armv7"
  }
)
config_setting(
  name = "ios_arm64",
  values = {
    "cpu": "ios_arm64"
  }
)
config_setting(
  name = "ios_arm64e",
  values = {
    "cpu": "ios_arm64e"
  }
)
config_setting(
  name = "ios_sim_arm64",
  values = {
    "cpu": "ios_sim_arm64"
  }
)
config_setting(
  name = "ios_i386",
  values = {
    "cpu": "ios_i386"
  }
)
config_setting(
  name = "ios_x86_64",
  values = {
    "cpu": "ios_x86_64"
  }
)
genrule(
  name = "FBSDKCoreKit_InfoPlist",
  srcs = [],
  outs = [
    "FBSDKCoreKit_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.FBSDKCoreKit</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>FBSDKCoreKit</string>
	<key>CFBundlePackageType</key>
	<string>FMWK</string>
	<key>CFBundleShortVersionString</key>
	<string>7.0.1</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>10.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)
apple_framework(
  name = "FBSDKCoreKit",
  module_name = "FBSDKCoreKit",
  bundle_id = "org.cocoapods.FBSDKCoreKit",
  swift_version = "5",
  link_dynamic = True,
  testonly = False,
  infoplists = [
    ":FBSDKCoreKit_InfoPlist"
  ],
  platforms = {
    "ios": "10.0"
  },
  srcs = glob(
    [
      "FBSDKCoreKit/FBSDKCoreKit/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/**/*.hpp",
      "FBSDKCoreKit/FBSDKCoreKit/**/*.m",
      "FBSDKCoreKit/FBSDKCoreKit/**/*.mm",
      "FBSDKCoreKit/FBSDKCoreKit/**/*.swift",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/**/*.m",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/*.m"
    ]
  ),
  public_headers = glob(
    [
      "FBSDKCoreKit/FBSDKCoreKit/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/AppEvents/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/AppEvents/Internal/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/AppLink/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/Instrument/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/Internal/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/GraphAPI/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Internal/**/*.h"
    ],
    exclude = [
      "FBSDKCoreKit/FBSDKCoreKit/AppEvents/Internal/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/Instrument/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/Internal/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Internal/**/*.h"
    ]
  ),
  private_headers = glob(
    [
      "FBSDKCoreKit/FBSDKCoreKit/AppEvents/Internal/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/Instrument/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Basics/Internal/**/*.h",
      "FBSDKCoreKit/FBSDKCoreKit/Internal/**/*.h"
    ]
  ),
  data = [
    "FacebookSDKStrings.bundle"
  ],
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  sdk_dylibs = [
    "c++",
    "stdc++",
    "z"
  ],
  sdk_frameworks = [
    "StoreKit"
  ],
  weak_sdk_frameworks = select(
    {
      "//conditions:default": [
        "Accelerate",
        "Accounts",
        "AudioToolbox",
        "CoreGraphics",
        "Foundation",
        "QuartzCore",
        "Security",
        "Social",
        "UIKit"
      ],
      ":tvosCase": [
        "AudioToolbox",
        "CoreGraphics",
        "CoreLocation",
        "Foundation",
        "QuartzCore",
        "Security",
        "UIKit"
      ]
    }
  ),
  xcconfig = {
    "GCC_PREPROCESSOR_DEFINITIONS": [
      "FBSDKCOCOAPODS=1"
    ]
  },
  visibility = [
    "//visibility:public"
  ]
)