load('@build_bazel_rules_ios//rules:apple_patched.bzl', 'apple_static_framework_import')
load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
config_setting(
  name = "ios_arm64",
  values = {
    "cpu": "ios_arm64"
  }
)
config_setting(
  name = "ios_armv7",
  values = {
    "cpu": "ios_armv7"
  }
)
config_setting(
  name = "ios_i386",
  values = {
    "cpu": "ios_i386"
  }
)
config_setting(
  name = "ios_sim_arm64",
  values = {
    "cpu": "ios_sim_arm64"
  }
)
config_setting(
  name = "ios_x86_64",
  values = {
    "cpu": "ios_x86_64"
  }
)
apple_framework(
  name = "FBSDKMarketingKit",
  module_name = "FBSDKMarketingKit",
  bundle_id = "org.cocoapods.FBSDKMarketingKit",
  link_dynamic = False,
  testonly = False,
  platforms = {
    "ios": "10.0"
  },
  public_headers = glob(
    [
      "FBSDKMarketingKit.framework/**/*.h",
      "FBSDKMarketingKit.framework/**/*.h"
    ]
  ),
  deps = [
    "//Tests/Pods/FBSDKCoreKit:FBSDKCoreKit"
  ] + select(
    {
      "//conditions:default": [],
      ":ios_arm64": [
        ":FBSDKMarketingKit_FBSDKMarketingKit_VendoredFramework"
      ],
      ":ios_armv7": [
        ":FBSDKMarketingKit_FBSDKMarketingKit_VendoredFramework"
      ],
      ":ios_i386": [
        ":FBSDKMarketingKit_FBSDKMarketingKit_VendoredFramework"
      ],
      ":ios_sim_arm64": [
        ":FBSDKMarketingKit_FBSDKMarketingKit_ios_sim_arm64__VendoredFramework"
      ],
      ":ios_x86_64": [
        ":FBSDKMarketingKit_FBSDKMarketingKit_VendoredFramework"
      ]
    }
  ),
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_static_framework_import(
  name = "FBSDKMarketingKit_FBSDKMarketingKit_VendoredFramework",
  framework_imports = glob(
    [
      "FBSDKMarketingKit.framework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_static_framework_import(
  name = "FBSDKMarketingKit_FBSDKMarketingKit_ios_sim_arm64__VendoredFramework",
  framework_imports = glob(
    [
      "._ios_sim_arm64_/FBSDKMarketingKit.framework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)